# dir_scan

./: README.md
projeto/: Cargo.toml
projeto/src/: main.rs
