[package]
name = "dir_scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
rand = "0.8"
get_if_addrs = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
walkdir = "2.4"
chrono = "0.4.31"
